--- a/DP/Policy Iteration.ipynb
+++ b/DP/Policy Iteration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -12,13 +12,13 @@
     "import pprint\n",
     "import sys\n",
     "if \"../\" not in sys.path:\n",
-    "  sys.path.append(\"../\") \n",
+    "    sys.path.append(\"../\") \n",
     "from lib.envs.gridworld import GridworldEnv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -76,13 +76,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 65,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "def policy_improvement(env, policy_eval_fn=policy_eval, discount_factor=1.0):\n",
+    "    counter = 0\n",
     "    \"\"\"\n",
     "    Policy Improvement Algorithm. Iteratively evaluates and improves a policy\n",
     "    until an optimal policy is found.\n",
@@ -104,15 +105,32 @@
     "    policy = np.ones([env.nS, env.nA]) / env.nA\n",
     "    \n",
     "    while True:\n",
-    "        # Implement this!\n",
-    "        break\n",
-    "    \n",
-    "    return policy, np.zeros(env.nS)"
+    "        V = policy_eval_fn(policy, env, discount_factor)\n",
+    "        new_policy = np.zeros_like(policy)\n",
+    "        for s in range(len(V)):\n",
+    "            maxV=-99999\n",
+    "            for a, action_prob in enumerate(policy[s]):\n",
+    "                for prob, next_state, reward, done in env.P[s][a]:\n",
+    "\n",
+    "                    if V[next_state]>maxV:\n",
+    "                        maxV = V[next_state]\n",
+    "                        best_action = a\n",
+    "            new_policy[s][best_action] = 1\n",
+    "\n",
+    "        if np.array_equal(policy, new_policy):\n",
+    "            break\n",
+    "        else:\n",
+    "            print(\"step: \", counter)\n",
+    "\n",
+    "            policy = new_policy\n",
+    "            counter+=1\n",
+    "            if counter >500: break\n",
+    "    return policy, V"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 66,
    "metadata": {
     "collapsed": false
    },
@@ -121,38 +139,40 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "step:  0\n",
+      "step:  1\n",
       "Policy Probability Distribution:\n",
-      "[[ 0.25  0.25  0.25  0.25]\n",
-      " [ 0.25  0.25  0.25  0.25]\n",
-      " [ 0.25  0.25  0.25  0.25]\n",
-      " [ 0.25  0.25  0.25  0.25]\n",
-      " [ 0.25  0.25  0.25  0.25]\n",
-      " [ 0.25  0.25  0.25  0.25]\n",
-      " [ 0.25  0.25  0.25  0.25]\n",
-      " [ 0.25  0.25  0.25  0.25]\n",
-      " [ 0.25  0.25  0.25  0.25]\n",
-      " [ 0.25  0.25  0.25  0.25]\n",
-      " [ 0.25  0.25  0.25  0.25]\n",
-      " [ 0.25  0.25  0.25  0.25]\n",
-      " [ 0.25  0.25  0.25  0.25]\n",
-      " [ 0.25  0.25  0.25  0.25]\n",
-      " [ 0.25  0.25  0.25  0.25]\n",
-      " [ 0.25  0.25  0.25  0.25]]\n",
+      "[[ 1.  0.  0.  0.]\n",
+      " [ 0.  0.  0.  1.]\n",
+      " [ 0.  0.  0.  1.]\n",
+      " [ 0.  0.  1.  0.]\n",
+      " [ 1.  0.  0.  0.]\n",
+      " [ 1.  0.  0.  0.]\n",
+      " [ 1.  0.  0.  0.]\n",
+      " [ 0.  0.  1.  0.]\n",
+      " [ 1.  0.  0.  0.]\n",
+      " [ 1.  0.  0.  0.]\n",
+      " [ 0.  1.  0.  0.]\n",
+      " [ 0.  0.  1.  0.]\n",
+      " [ 1.  0.  0.  0.]\n",
+      " [ 0.  1.  0.  0.]\n",
+      " [ 0.  1.  0.  0.]\n",
+      " [ 1.  0.  0.  0.]]\n",
       "\n",
       "Reshaped Grid Policy (0=up, 1=right, 2=down, 3=left):\n",
-      "[[0 0 0 0]\n",
-      " [0 0 0 0]\n",
-      " [0 0 0 0]\n",
-      " [0 0 0 0]]\n",
+      "[[0 3 3 2]\n",
+      " [0 0 0 2]\n",
+      " [0 0 1 2]\n",
+      " [0 1 1 0]]\n",
       "\n",
       "Value Function:\n",
-      "[ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
+      "[ 0. -1. -2. -3. -1. -2. -3. -2. -2. -3. -2. -1. -3. -2. -1.  0.]\n",
       "\n",
       "Reshaped Grid Value Function:\n",
-      "[[ 0.  0.  0.  0.]\n",
-      " [ 0.  0.  0.  0.]\n",
-      " [ 0.  0.  0.  0.]\n",
-      " [ 0.  0.  0.  0.]]\n",
+      "[[ 0. -1. -2. -3.]\n",
+      " [-1. -2. -3. -2.]\n",
+      " [-2. -3. -2. -1.]\n",
+      " [-3. -2. -1.  0.]]\n",
       "\n"
      ]
     }
@@ -179,25 +199,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 67,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "AssertionError",
-     "evalue": "\nArrays are not almost equal to 2 decimals\n\n(mismatch 87.5%)\n x: array([ 0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n        0.,  0.,  0.])\n y: array([ 0, -1, -2, -3, -1, -2, -3, -2, -2, -3, -2, -1, -3, -2, -1,  0])",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-15-55581f8eb5c9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Test the value function\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mexpected_v\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m  \u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtesting\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0massert_array_almost_equal\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mv\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexpected_v\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdecimal\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/Users/dennybritz/venvs/tf/lib/python3.5/site-packages/numpy/testing/utils.py\u001b[0m in \u001b[0;36massert_array_almost_equal\u001b[0;34m(x, y, decimal, err_msg, verbose)\u001b[0m\n\u001b[1;32m    914\u001b[0m     assert_array_compare(compare, x, y, err_msg=err_msg, verbose=verbose,\n\u001b[1;32m    915\u001b[0m              \u001b[0mheader\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Arrays are not almost equal to %d decimals'\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0mdecimal\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 916\u001b[0;31m              precision=decimal)\n\u001b[0m\u001b[1;32m    917\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    918\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Users/dennybritz/venvs/tf/lib/python3.5/site-packages/numpy/testing/utils.py\u001b[0m in \u001b[0;36massert_array_compare\u001b[0;34m(comparison, x, y, err_msg, verbose, header, precision)\u001b[0m\n\u001b[1;32m    735\u001b[0m                                 names=('x', 'y'), precision=precision)\n\u001b[1;32m    736\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mcond\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 737\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mAssertionError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmsg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    738\u001b[0m     \u001b[0;32mexcept\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    739\u001b[0m         \u001b[0;32mimport\u001b[0m \u001b[0mtraceback\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAssertionError\u001b[0m: \nArrays are not almost equal to 2 decimals\n\n(mismatch 87.5%)\n x: array([ 0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n        0.,  0.,  0.])\n y: array([ 0, -1, -2, -3, -1, -2, -3, -2, -2, -3, -2, -1, -3, -2, -1,  0])"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Test the value function\n",
     "expected_v = np.array([ 0, -1, -2, -3, -1, -2, -3, -2, -2, -3, -2, -1, -3, -2, -1,  0])\n",
@@ -212,13 +218,40 @@
    },
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [env_tf]",
    "language": "python",
-   "name": "python3"
+   "name": "Python [env_tf]"
   },
   "language_info": {
    "codemirror_mode": {
