--- a/MC/Off-Policy MC Control with Weighted Importance Sampling.ipynb
+++ b/MC/Off-Policy MC Control with Weighted Importance Sampling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -81,7 +81,9 @@
     "    \"\"\"\n",
     "    \n",
     "    def policy_fn(observation):\n",
-    "        pass\n",
+    "        action_probs = np.zeros(len(Q))\n",
+    "        action_probs[np.argmax(Q)] = 1\n",
+    "        return action_probs\n",
     "        # Implement this!\n",
     "    return policy_fn"
    ]
@@ -180,7 +182,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.0"
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
